code/java/SPAREngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Style Performance and Risk Analysis (SPAR) Engine client library for Java

[![API Version](https://img.shields.io/badge/api-v3.16.2-blue)](https://developer.factset.com/api-catalog/spar-engine-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/sparengine/3.2.1)](https://central.sonatype.com/artifact/com.factset.sdk/sparengine/3.2.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.16.2
- SDK version: 3.2.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.protobuf</groupId>
  <artifactId>stachextensions</artifactId>
  <version>1.3.2</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>sparengine</artifactId>
  <version>3.2.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.protobuf:stachextensions:1.3.2"
    implementation "com.factset.sdk:sparengine:3.2.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.SPAREngine.*;
import com.factset.sdk.SPAREngine.auth.*;
import com.factset.sdk.SPAREngine.models.*;
import com.factset.sdk.SPAREngine.api.AccountsApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class AccountsApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        AccountsApi apiInstance = new AccountsApi(defaultClient);
        String path = "Client:"; // String | The directory to get the accounts and sub-directories.
        try {
            AccountDirectoriesRoot result = apiInstance.getAccounts(path);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling AccountsApi#getAccounts");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.SPAREngine.*;
import com.factset.sdk.SPAREngine.api.AccountsApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

AccountsApi apiInstance = new AccountsApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.SPAREngine.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*AccountsApi* | [**getSPARReturnsType**](docs/AccountsApi.md#getSPARReturnsType) | **GET** /analytics/engines/spar/v3/accounts/{accountPath}/returns-type | Get SPAR account returns type details
*BenchmarksApi* | [**getSPARBenchmarkById**](docs/BenchmarksApi.md#getSPARBenchmarkById) | **GET** /analytics/engines/spar/v3/benchmarks | Get SPAR benchmark details
*ComponentsApi* | [**getSPARComponentById**](docs/ComponentsApi.md#getSPARComponentById) | **GET** /analytics/engines/spar/v3/components/{id} | Get SPAR component by id
*ComponentsApi* | [**getSPARComponents**](docs/ComponentsApi.md#getSPARComponents) | **GET** /analytics/engines/spar/v3/components | Get SPAR components
*CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*DocumentsApi* | [**getSPAR3Documents**](docs/DocumentsApi.md#getSPAR3Documents) | **GET** /analytics/engines/spar/v3/documents/{path} | Gets SPAR3 documents and sub-directories in a directory
*FrequenciesApi* | [**getSPARFrequencies**](docs/FrequenciesApi.md#getSPARFrequencies) | **GET** /analytics/engines/spar/v3/frequencies | Get SPAR frequencies
*SparCalculationsApi* | [**cancelCalculationById**](docs/SparCalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/spar/v3/calculations/{id} | Cancel SPAR calculation
*SparCalculationsApi* | [**getAllCalculations**](docs/SparCalculationsApi.md#getAllCalculations) | **GET** /analytics/engines/spar/v3/calculations | Get all calculations
*SparCalculationsApi* | [**getCalculationParameters**](docs/SparCalculationsApi.md#getCalculationParameters) | **GET** /analytics/engines/spar/v3/calculations/{id} | Get SPAR calculation parameters by id
*SparCalculationsApi* | [**getCalculationStatusById**](docs/SparCalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/spar/v3/calculations/{id}/status | Get SPAR calculation status by id
*SparCalculationsApi* | [**getCalculationUnitResultById**](docs/SparCalculationsApi.md#getCalculationUnitResultById) | **GET** /analytics/engines/spar/v3/calculations/{id}/units/{unitId}/result | Get SPAR calculation result by id
*SparCalculationsApi* | [**postAndCalculate**](docs/SparCalculationsApi.md#postAndCalculate) | **POST** /analytics/engines/spar/v3/calculations | Create and Run SPAR calculation
*SparCalculationsApi* | [**putAndCalculate**](docs/SparCalculationsApi.md#putAndCalculate) | **PUT** /analytics/engines/spar/v3/calculations/{id} | Create or Update SPAR calculation and run it.
*SparPeerUniverseApi* | [**getListOfPeerUniverse**](docs/SparPeerUniverseApi.md#getListOfPeerUniverse) | **GET** /analytics/engines/spar/v3/peer-universe | Get List of Peer Universe


## Documentation for Models

 - [AccountDirectories](docs/AccountDirectories.md)
 - [AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [CalculationMeta](docs/CalculationMeta.md)
 - [CalculationStatus](docs/CalculationStatus.md)
 - [CalculationStatusMeta](docs/CalculationStatusMeta.md)
 - [CalculationStatusRoot](docs/CalculationStatusRoot.md)
 - [CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [CalculationUnitStatusMeta](docs/CalculationUnitStatusMeta.md)
 - [CalculationsSummary](docs/CalculationsSummary.md)
 - [CalculationsSummaryRoot](docs/CalculationsSummaryRoot.md)
 - [ClientErrorResponse](docs/ClientErrorResponse.md)
 - [ComponentSummary](docs/ComponentSummary.md)
 - [ComponentSummaryRoot](docs/ComponentSummaryRoot.md)
 - [Currency](docs/Currency.md)
 - [CurrencyRoot](docs/CurrencyRoot.md)
 - [DocumentDirectories](docs/DocumentDirectories.md)
 - [DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [Error](docs/Error.md)
 - [ErrorSource](docs/ErrorSource.md)
 - [Frequency](docs/Frequency.md)
 - [FrequencyRoot](docs/FrequencyRoot.md)
 - [ObjectRoot](docs/ObjectRoot.md)
 - [PaginationInfo](docs/PaginationInfo.md)
 - [PaginationMeta](docs/PaginationMeta.md)
 - [ReturnType](docs/ReturnType.md)
 - [SPARAccounts](docs/SPARAccounts.md)
 - [SPARAccountsRoot](docs/SPARAccountsRoot.md)
 - [SPARBenchmark](docs/SPARBenchmark.md)
 - [SPARBenchmarkRoot](docs/SPARBenchmarkRoot.md)
 - [SPARCalculationParameters](docs/SPARCalculationParameters.md)
 - [SPARCalculationParametersRoot](docs/SPARCalculationParametersRoot.md)
 - [SPARComponent](docs/SPARComponent.md)
 - [SPARComponentIdentifier](docs/SPARComponentIdentifier.md)
 - [SPARComponentRoot](docs/SPARComponentRoot.md)
 - [SPARDateParameters](docs/SPARDateParameters.md)
 - [SPARIdentifier](docs/SPARIdentifier.md)
 - [SPARPeerUniverseListResponse](docs/SPARPeerUniverseListResponse.md)
 - [SPARPeerUniverseResponseItem](docs/SPARPeerUniverseResponseItem.md)
 - [SPARPeerUniverseRoot](docs/SPARPeerUniverseRoot.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
